# ai_workspace

./: README.md
ai_agent/: README.md
ai_agent/prompt/: demo.py  economi_demo.py
ai_agent/rag/: base_promptTemplate.py  chat_model.py  cos_similarity.py  ollama_demo.py  prompt_fewshot.py  prompt_template.py  stream_print.py  text_embedding.py
claudecode/: README.md
code_basic/cpp_learn/: CMakeLists.txt  README.md  main.cpp
code_basic/cpp_learn/hello/: CMakeLists.txt  hello.cpp  hello.h
code_basic/cpp_learn/test/: CMakeLists.txt  test_hello.cpp  test_world.cpp
code_basic/cpp_learn/world/: CMakeLists.txt  world.cpp
code_basic/sdl_learn/: CMakeLists.txt  README.md  hello_SDL2.cpp
cpp_learn/: .gitignore  CMakeLists.txt  README.md  _Makefile_  main.cpp
cpp_learn/hello/: CMakeLists.txt  hello.cpp  hello.h
cpp_learn/test/: CMakeLists.txt
cpp_learn/thirdpart/googletest-1.17.0/my_gbuild/: CMakeCache.txt
cpp_learn/world/: CMakeLists.txt  world.h
openclaw/: README.md
world_quant/: README.md
